# LOTT

./: .gitignore  README.md  README_PROTOTYPE.md  TASK_LIST.md  pyproject.toml  requirements.txt
db_benchmark/: __init__.py  config.py  run_benchmark.py
db_benchmark/adapters/: __init__.py  base.py  duckdb_adapter.py  influxdb_adapter.py  mysql_adapter.py  postgres_adapter.py  sqlite_adapter.py  timescaledb_adapter.py
db_benchmark/benchmark/: __init__.py  comparison.py  runner.py
docker/: Dockerfile  docker-compose.yml
docs/: DL任务协作说明.md  LOTT_REQ_DATA.md  LOTT_REQ_ENGINE.md  LOTT_REQ_GUI.md  LOTT_REQ_MASTER.md  TIMESCALEDB_DESKTOP_GUI.md  TIMESCALEDB_DOCKER_TUTORIAL.md
roadmap/: LOTT_ROADMAP.md
scripts/: akshare_all_exchanges.py  jqdata_catchup.sh  jqdata_daily.sh  jqdata_downloader.py  merge_minute_history.py  minute_collector.py  receipt_collector.py  shfe_full_downloader.py
src/: README.md
src/Backtest/: README.md  backtest.py  backtest_frameworks.md  config.py  data.py  result.py  signal.py  strategy.py
src/Backtest/adapters/: README.md  backtesting.py  backtrader.py  base.py  vectorbt.py
src/Backtest/examples/: test_backtest.py  usage.py
src/Cross_Layer/: README.md  detail.py  global_config.py  global_imports.py  json_storage.py  logger.py  timestamp_engine.py
src/Data/: README.md
src/Data/DataFeed/: README.MD  bar_collector.py  ctp_connector.py  lott_gateway.py  realtime_recorder.py
src/Data/DataManage/: README.md  cache.py  data_operation.py  import_data.py  local_access.py  timeseries_io.py
src/Data/DataSource/: INTEGRATION_PLAN.md  README.md
src/Data/DataSource/scripts/: import_akshare_csv.py  import_excel_multi.py
src/Data/DatabaseManage/: README.md  TimescaleDB_config.py  column_selector.py  database_config.py  database_connect.py  database_operation.py  database_tables.py  timescale_setup.py  utils.py
src/Data/DatabaseManage/TimescaleDB/: README.md  client.py  config.py  examples.py  json_import.py  tables.py
src/Data/DatabaseManage/backup_scripts/: mysql_backup.py  pg_backup.py  sqlite_backup.py
src/Frontend/: ARCHITECTURE_COMPARISON.md  BACKTEST_INTERFACE.md  FRONTEND_REQUIREMENTS.md  INTERFACE_DEFINITION.md  README.md  run_frontend.py
src/Frontend/chart/: README.md  chart_widget.py
src/Frontend/chart/cursor/: crosshair.py
src/Frontend/chart/items/: bar_item.py  base_item.py  candle_item.py  line_item.py
src/Frontend/chart/markers/: base_marker.py  marker_manager.py  trade_marker.py
src/Frontend/chart/overlays/: confidence_band.py
src/Frontend/core/: README.md  config.py  data_manager.py  data_proxy.py  signal_bus.py
src/Frontend/panels/: README.md  base_panel.py  info_panel.py  toolbar.py
src/Frontend/panels/backtest/: backtest_panel.py  position_chart.py  price_chart.py  return_chart.py  trade_list.py
src/Frontend/panels/database/: column_tree.py  database_panel.py  metadata_view.py  table_view.py
src/Frontend/panels/variables/: lagging_control.py  multi_line_chart.py  types.py  variable_list.py  variable_panel.py
src/Frontend/reference/: Visualization.py
src/Frontend/reference/vnpy_reference/: README.md
src/Frontend/styles/: README.md  chart_style.py  theme.py
src/Frontend/tests/: __init__.py  test_chart.py  test_core.py  test_integration.py
src/Frontend/ui/: README.md  dock_manager.py  main_window.py
src/Frontend/ui/widgets/: color_picker.py
src/Frontend/utils/: README.md  data_utils.py  date_utils.py  export_utils.py
src/Report/: README.md  multiindex_report.py
src/Service/: README.md  cache.py  quality.py  returns.py  transformer.py
src/Service/data_service/: DATA_SERVICE.md  README.md  config.py  datasource.py  redis_client.py  service.py
src/Service/data_service/examples/: usage.py
